Fix overflow issue in latest mobile chrome, align empty state text

--- a/src/css/misc.less
+++ b/src/css/misc.less
@@ -27,7 +27,7 @@ html, body {
     top:0; left:0;
     z-index:0;
     width:100vw;
-    height:100vh;
+    height:100%;
     overflow:hidden;
 }
 
@@ -54,7 +54,7 @@ body {
 #main-app {
     .transition(@prop:transform);
     .flexbox(@dir:column);
-    height:100vh;
+    height:100%;
     width:100vw;
     opacity:0;
     transform:scale(.5);
