--- a/src/css/ui/playlist/pane.less
+++ b/src/css/ui/playlist/pane.less
@@ -185,6 +185,7 @@
 
                 @media @media-mobile {
                     font-size:@large-text;
+                    top:@row;
                 }
             }
             &:after {
